v1.0.0/modules/schema/pages/class/EnvironmentalMonitoringStation.adoc
= `EnvironmentalMonitoringStation`
:toclevels: 4


+++An environmental monitoring station, examples of which could be a weather station or a seismic monitoring station.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EnvironmentalMonitoringStation`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`EnvironmentalMonitoringStation`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
EnvironmentalMonitoringStation {
  style {
    fill: "#fffbef"
    shadow: true
  }
}





Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TimeSeries {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ReportingCapability {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



EnvironmentalAnalog {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}





EnvironmentalMonitoringStation -> Location: Location


EnvironmentalMonitoringStation -> UsagePoint: UsagePoint


EnvironmentalMonitoringStation -> TimeSeries: TimeSeries


EnvironmentalMonitoringStation -> ReportingCapability: ReportingCapability


EnvironmentalMonitoringStation -> EnvironmentalAnalog: EnvironmentalAnalog


EnvironmentalMonitoringStation -> DiagramObject: DiagramObjects


EnvironmentalMonitoringStation -> InstanceSet: InstanceSet


EnvironmentalMonitoringStation -> Name: Names


EnvironmentalMonitoringStation -> ChangeSetMember: PropertiesCIMDataObject


EnvironmentalMonitoringStation -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this monitoring station.+++

| <<dstObserved,`dstObserved`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Whether this station is currently reporting using daylight saving time.  Intended to aid a utility Weather Service in interpreting information coming from a station and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++

| <<isNetworked,`isNetworked`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Indication that station is part of a network of stations used to monitor weather phenomena covering a large geographical area.+++

| <<timeZoneOffset,`timeZoneOffset`>>
| 0..1
| xref::class/Minutes.adoc[`Minutes`]
| +++The time offset from UTC (a.k.a. GMT) configured in the station "clock", not (necessarily) the time zone in which the station is physically located.
This attribute exists to support management of utility monitoring stations and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++

| <<EnvironmentalAnalog,`EnvironmentalAnalog`>>
| 0..*
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]
| +++Environmental analog measurement provided by this monitoring station.+++

| <<ReportingCapability,`ReportingCapability`>>
| 0..*
| xref::class/ReportingCapability.adoc[`ReportingCapability`]
| +++One of the reporting capabilities of this monitoring station.+++

| <<TimeSeries,`TimeSeries`>>
| 0..*
| xref::class/TimeSeries.adoc[`TimeSeries`]
| n/a

| <<UsagePoint,`UsagePoint`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| n/a

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dstObserved]
=== `dstObserved`
+++Whether this station is currently reporting using daylight saving time.  Intended to aid a utility Weather Service in interpreting information coming from a station and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.dstObserved`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#EnvironmentalAnalog]
=== `EnvironmentalAnalog`
+++Environmental analog measurement provided by this monitoring station.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.EnvironmentalAnalog`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#isNetworked]
=== `isNetworked`
+++Indication that station is part of a network of stations used to monitor weather phenomena covering a large geographical area.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.isNetworked`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this monitoring station.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ReportingCapability]
=== `ReportingCapability`
+++One of the reporting capabilities of this monitoring station.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.ReportingCapability`
| Cardinality
| 0..*
| Type
| xref::class/ReportingCapability.adoc[`ReportingCapability`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TimeSeries]
=== `TimeSeries`


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.TimeSeries`
| Cardinality
| 0..*
| Type
| xref::class/TimeSeries.adoc[`TimeSeries`]


|===

//[discrete]
[#timeZoneOffset]
=== `timeZoneOffset`
+++The time offset from UTC (a.k.a. GMT) configured in the station "clock", not (necessarily) the time zone in which the station is physically located.
This attribute exists to support management of utility monitoring stations and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.timeZoneOffset`
| Cardinality
| 0..1
| Type
| xref::class/Minutes.adoc[`Minutes`]


|===

//[discrete]
[#UsagePoint]
=== `UsagePoint`


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.UsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===


