v1.1.0/modules/schema/pages/class/EnvironmentalMonitoringStation.adoc
= `EnvironmentalMonitoringStation`
:toclevels: 4


+++An environmental monitoring station, examples of which could be a weather station or a seismic monitoring station.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:EnvironmentalMonitoringStation`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`EnvironmentalMonitoringStation`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<EnvironmentalAnalog,`EnvironmentalAnalog`>>
//| [[slots_table.EnvironmentalAnalog]]<<EnvironmentalAnalog,`EnvironmentalAnalog`>>
| 0..* +
xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]
| +++Environmental analog measurement provided by this monitoring station.+++
| _n/a_

| <<Location,`Location`>>
//| [[slots_table.Location]]<<Location,`Location`>>
| 0..1 +
xref::class/Location.adoc[`Location`]
| +++Location of this monitoring station.+++
| _n/a_

| <<ReportingCapability,`ReportingCapability`>>
//| [[slots_table.ReportingCapability]]<<ReportingCapability,`ReportingCapability`>>
| 0..* +
xref::class/ReportingCapability.adoc[`ReportingCapability`]
| +++One of the reporting capabilities of this monitoring station.+++
| _n/a_

| <<TimeSeries,`TimeSeries`>>
//| [[slots_table.TimeSeries]]<<TimeSeries,`TimeSeries`>>
| 0..* +
xref::class/TimeSeries.adoc[`TimeSeries`]
| _n/a_
| _n/a_

| <<UsagePoint,`UsagePoint`>>
//| [[slots_table.UsagePoint]]<<UsagePoint,`UsagePoint`>>
| 0..* +
xref::class/UsagePoint.adoc[`UsagePoint`]
| _n/a_
| _n/a_

| <<dstObserved,`dstObserved`>>
//| [[slots_table.dstObserved]]<<dstObserved,`dstObserved`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Whether this station is currently reporting using daylight saving time.  Intended to aid a utility Weather Service in...+++
| _n/a_

| <<isNetworked,`isNetworked`>>
//| [[slots_table.isNetworked]]<<isNetworked,`isNetworked`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Indication that station is part of a network of stations used to monitor weather phenomena covering a large geographical area.+++
| _n/a_

| <<timeZoneOffset,`timeZoneOffset`>>
//| [[slots_table.timeZoneOffset]]<<timeZoneOffset,`timeZoneOffset`>>
| 0..1 +
xref::class/Minutes.adoc[`Minutes`]
| +++The time offset from UTC (a.k.a. GMT) configured in the station "clock", not (necessarily) the time zone in which the...+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#dstObserved]
=== `dstObserved`
+++Whether this station is currently reporting using daylight saving time.  Intended to aid a utility Weather Service in interpreting information coming from a station and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.dstObserved`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.dstObserved,&#10548;>>
--
////


//[discrete]
[#EnvironmentalAnalog]
=== `EnvironmentalAnalog`
+++Environmental analog measurement provided by this monitoring station.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.EnvironmentalAnalog`
| Cardinality
| 0..*
| Type
| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalAnalog,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isNetworked]
=== `isNetworked`
+++Indication that station is part of a network of stations used to monitor weather phenomena covering a large geographical area.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.isNetworked`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]


|===

////
[.text-left]
--
<<slots_table.isNetworked,&#10548;>>
--
////


//[discrete]
[#Location]
=== `Location`
+++Location of this monitoring station.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]


|===

////
[.text-left]
--
<<slots_table.Location,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ReportingCapability]
=== `ReportingCapability`
+++One of the reporting capabilities of this monitoring station.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.ReportingCapability`
| Cardinality
| 0..*
| Type
| xref::class/ReportingCapability.adoc[`ReportingCapability`]


|===

////
[.text-left]
--
<<slots_table.ReportingCapability,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimeSeries]
=== `TimeSeries`



[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.TimeSeries`
| Cardinality
| 0..*
| Type
| xref::class/TimeSeries.adoc[`TimeSeries`]


|===

////
[.text-left]
--
<<slots_table.TimeSeries,&#10548;>>
--
////


//[discrete]
[#timeZoneOffset]
=== `timeZoneOffset`
+++The time offset from UTC (a.k.a. GMT) configured in the station "clock", not (necessarily) the time zone in which the station is physically located.
This attribute exists to support management of utility monitoring stations and has no direct relationship to the manner in which time is expressed in EnvironmentalValueSet.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.timeZoneOffset`
| Cardinality
| 0..1
| Type
| xref::class/Minutes.adoc[`Minutes`]


|===

////
[.text-left]
--
<<slots_table.timeZoneOffset,&#10548;>>
--
////


//[discrete]
[#UsagePoint]
=== `UsagePoint`



[cols="h,4",width=65%]
|===
| URI
| `cim:EnvironmentalMonitoringStation.UsagePoint`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.UsagePoint,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/EnvironmentalAnalog.adoc[`EnvironmentalAnalog`] | xref::class/EnvironmentalAnalog.adoc#EnvironmentalMonitoringStation[`EnvironmentalMonitoringStation`]



| xref::class/Location.adoc[`Location`] | xref::class/Location.adoc#EnvironmentalMonitoringStation[`EnvironmentalMonitoringStation`]



| xref::class/ReportingCapability.adoc[`ReportingCapability`] | xref::class/ReportingCapability.adoc#EnvironmentalMonitoringStation[`EnvironmentalMonitoringStation`]



| xref::class/TimeSeries.adoc[`TimeSeries`] | xref::class/TimeSeries.adoc#EnvironmentalMonitoringStation[`EnvironmentalMonitoringStation`]



| xref::class/UsagePoint.adoc[`UsagePoint`] | xref::class/UsagePoint.adoc#EnvironmentalMonitoringStation[`EnvironmentalMonitoringStation`]


|===

